More crop descriptions

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3890,23 +3890,23 @@
   "chore.cook.3.goblins.treat": "Cook 3 Goblin's Treat",
   "chore.cook.5.goblins.treat": "Cook 5 Goblin's Treat",
   "chore.cook.7.goblins.treat": "Cook 7 Goblin's Treat",
-  "chore.harvest.250.beetroot": "Harvest 250 Beetroot",
-  "chore.harvest.300.beetroot": "Harvest 300 Beetroot",
-  "chore.harvest.180.cauliflower": "Harvest 180 Cauliflower",
-  "chore.harvest.200.cauliflower": "Harvest 200 Cauliflower",
-  "chore.harvest.100.parsnip": "Harvest 100 Parsnip",
-  "chore.harvest.150.parsnip": "Harvest 150 Parsnip",
-  "chore.harvest.80.eggplant": "Harvest 80 Eggplant",
-  "chore.harvest.120.eggplant": "Harvest 120 Eggplant",
-  "chore.harvest.150.sunflowers": "Harvest 150 Sunflowers",
-  "chore.harvest.200.sunflowers": "Harvest 200 Sunflowers",
-  "chore.harvest.250.sunflowers": "Harvest 250 Sunflowers",
-  "chore.harvest.100.potatoes": "Harvest 100 Potatoes",
-  "chore.harvest.125.potatoes": "Harvest 125 Potatoes",
-  "chore.harvest.150.potatoes": "Harvest 150 Potatoes",
-  "chore.harvest.75.pumpkins": "Harvest 75 Pumpkins",
-  "chore.harvest.100.pumpkins": "Harvest 100 Pumpkins",
-  "chore.harvest.125.pumpkins": "Harvest 125 Pumpkins",
+  "chore.harvest.250.beetroot": "Harvest Beetroot 250 times",
+  "chore.harvest.300.beetroot": "Harvest Beetroot 300 times",
+  "chore.harvest.180.cauliflower": "Harvest Cauliflower 180 times",
+  "chore.harvest.200.cauliflower": "Harvest Cauliflower 200 times",
+  "chore.harvest.100.parsnip": "Harvest Parsnip 100 times",
+  "chore.harvest.150.parsnip": "Harvest Parsnip 150 times",
+  "chore.harvest.80.eggplant": "Harvest Eggplant 80 times",
+  "chore.harvest.120.eggplant": "Harvest Eggplant 120 times",
+  "chore.harvest.150.sunflowers": "Harvest Sunflowers 150 times",
+  "chore.harvest.200.sunflowers": "Harvest Sunflowers 200 times",
+  "chore.harvest.250.sunflowers": "Harvest Sunflowers 250 times",
+  "chore.harvest.100.potatoes": "Harvest Potato 100 times",
+  "chore.harvest.125.potatoes": "Harvest Potato 125 times",
+  "chore.harvest.150.potatoes": "Harvest Potato 150 times",
+  "chore.harvest.75.pumpkins": "Harvest Pumpkin 75 times",
+  "chore.harvest.100.pumpkins": "Harvest Pumpkin 100 times",
+  "chore.harvest.125.pumpkins": "Harvest Pumpkin 125 times",
   "chore.eat.10.pumpkin.soup": "Eat 10 Pumpkin Soup",
   "chore.eat.12.pumpkin.soup": "Eat 12 Pumpkin Soup",
   "chore.eat.15.pumpkin.soup": "Eat 15 Pumpkin Soup",
