--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3747,6 +3747,7 @@
   "restock.itemsToRestock": "The following items will be restocked:",
   "restock.moreStock": "Restock to get more stock.",
   "restock.dailyShipment": "Daily Shipment",
+  "restock.shipmentArrived": "Your daily free shipment has arrived!",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
