--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3952,12 +3952,12 @@
   "chore.spend.1000.coins": "Spend 1,000 Coins",
   "chore.spend.2000.coins": "Spend 2,000 Coins",
   "chore.spend.3000.coins": "Spend 3,000 Coins",
-  "chore.harvest.50.carrots": "Harvest 50 Carrots",
-  "chore.harvest.75.carrots": "Harvest 75 Carrots",
-  "chore.harvest.100.carrots": "Harvest 100 Carrots",
-  "chore.harvest.25.cabbage": "Harvest 25 Cabbage",
-  "chore.harvest.50.cabbage": "Harvest 50 Cabbage",
-  "chore.harvest.75.cabbage": "Harvest 75 Cabbage",
+  "chore.harvest.50.carrots": "Harvest Carrots 50 times",
+  "chore.harvest.75.carrots": "Harvest Carrots 75 times",
+  "chore.harvest.100.carrots": "Harvest Carrots 100 times",
+  "chore.harvest.25.cabbage": "Harvest Cabbage 25 times",
+  "chore.harvest.50.cabbage": "Harvest Cabbage 50 times",
+  "chore.harvest.75.cabbage": "Harvest Cabbage 75 times",
   "chore.eat.15.mashed.potatoes": "Eat 15 Mashed Potatoes",
   "chore.eat.20.mashed.potatoes": "Eat 20 Mashed Potatoes",
   "chore.eat.25.mashed.potatoes": "Eat 25 Mashed Potatoes",
@@ -3976,15 +3976,15 @@
   "chore.earn.2500.coins": "Earn 2,500 Coins",
   "chore.earn.3500.coins": "Earn 3,500 Coins",
   "chore.earn.5000.coins": "Earn 5,000 Coins",
-  "chore.harvest.15.soybeans": "Harvest 15 Soybeans",
-  "chore.harvest.30.soybeans": "Harvest 30 Soybeans",
-  "chore.harvest.50.soybeans": "Harvest 50 Soybeans",
-  "chore.harvest.15.beetroots": "Harvest 15 Beetroots",
-  "chore.harvest.25.beetroots": "Harvest 25 Beetroots",
-  "chore.harvest.35.beetroots": "Harvest 35 Beetroots",
-  "chore.harvest.10.cauliflowers": "Harvest 10 Cauliflowers",
-  "chore.harvest.20.cauliflowers": "Harvest 20 Cauliflowers",
-  "chore.harvest.30.cauliflowers": "Harvest 30 Cauliflowers",
+  "chore.harvest.15.soybeans": "Harvest Soybean 15 times",
+  "chore.harvest.30.soybeans": "Harvest Soybean 30 times",
+  "chore.harvest.50.soybeans": "Harvest Soybean 50 times",
+  "chore.harvest.15.beetroots": "Harvest Beetroot 15 times",
+  "chore.harvest.25.beetroots": "Harvest Beetroot 25 times",
+  "chore.harvest.35.beetroots": "Harvest Beetroot 35 times",
+  "chore.harvest.10.cauliflowers": "Harvest Cauliflower 10 times",
+  "chore.harvest.20.cauliflowers": "Harvest Cauliflower 20 times",
+  "chore.harvest.30.cauliflowers": "Harvest Cauliflower 30 times",
   "chore.collect.10.eggs": "Collect Eggs 10 times",
   "chore.collect.15.eggs": "Collect Eggs 15 times",
   "chore.collect.20.eggs": "Collect Eggs 20 times",
@@ -4021,26 +4021,26 @@
   "chore.eat.5.orange.cake": "Eat 5 Orange Cake",
   "chore.eat.6.orange.cake": "Eat 6 Orange Cake",
   "chore.eat.7.orange.cake": "Eat 7 Orange Cake",
-  "chore.pick.12.grapes": "Pick 12 Grapes",
-  "chore.pick.16.grapes": "Pick 16 Grapes",
-  "chore.pick.20.grapes": "Pick 20 Grapes",
-  "chore.harvest.8.rice": "Harvest 8 Rice",
-  "chore.harvest.10.rice": "Harvest 10 Rice",
-  "chore.harvest.12.rice": "Harvest 12 Rice",
-  "chore.harvest.4.olives": "Harvest 4 Olives",
-  "chore.harvest.6.olives": "Harvest 6 Olives",
-  "chore.harvest.8.olives": "Harvest 8 Olives",
-  "chore.grow.3.red.balloon.flower": "Grow 3 Red Balloon Flower",
-  "chore.grow.4.red.balloon.flower": "Grow 4 Red Balloon Flower",
-  "chore.grow.5.red.balloon.flower": "Grow 5 Red Balloon Flower",
-  "chore.grow.3.blue.balloon.flower": "Grow 3 Blue Balloon Flower",
-  "chore.grow.4.blue.balloon.flower": "Grow 4 Blue Balloon Flower",
-  "chore.grow.5.blue.balloon.flower": "Grow 5 Blue Balloon Flower",
-  "chore.grow.3.purple.daffodil": "Grow 3 Purple Daffodil",
-  "chore.grow.4.purple.daffodil": "Grow 4 Purple Daffodil",
-  "chore.grow.5.purple.daffodil": "Grow 5 Purple Daffodil",
-  "chore.grow.2.red.daffodil": "Grow 2 Red Daffodil",
-  "chore.grow.3.red.daffodil": "Grow 3 Red Daffodil",
+  "chore.pick.12.grapes": "Pick Grapes 12 times",
+  "chore.pick.16.grapes": "Pick Grapes 16 times",
+  "chore.pick.20.grapes": "Pick Grapes 20 times",
+  "chore.harvest.8.rice": "Harvest Rice 8 times",
+  "chore.harvest.10.rice": "Harvest Rice 10 times",
+  "chore.harvest.12.rice": "Harvest Rice 12 times",
+  "chore.harvest.4.olives": "Harvest Olives 4 times",
+  "chore.harvest.6.olives": "Harvest Olives 6 times",
+  "chore.harvest.8.olives": "Harvest Olives 8 times",
+  "chore.grow.3.red.balloon.flower": "Grow Red Balloon Flower 3 times",
+  "chore.grow.4.red.balloon.flower": "Grow Red Balloon Flower 4 times",
+  "chore.grow.5.red.balloon.flower": "Grow Red Balloon Flower 5 times",
+  "chore.grow.3.blue.balloon.flower": "Grow Blue Balloon Flower 3 times",
+  "chore.grow.4.blue.balloon.flower": "Grow Blue Balloon Flower 4 times",
+  "chore.grow.5.blue.balloon.flower": "Grow Blue Balloon Flower 5 times",
+  "chore.grow.3.purple.daffodil": "Grow Purple Daffodil 3 times",
+  "chore.grow.4.purple.daffodil": "Grow Purple Daffodil 4 times",
+  "chore.grow.5.purple.daffodil": "Grow Purple Daffodil 5 times",
+  "chore.grow.2.red.daffodil": "Grow Red Daffodil 2 times",
+  "chore.grow.3.red.daffodil": "Grow Red Daffodil 3 times",
   "chore.cook.2.roast.veggies": "Cook 2 Roast Veggies",
   "chore.cook.3.roast.veggies": "Cook 3 Roast Veggies",
   "chore.cook.4.roast.veggies": "Cook 4 Roast Veggies",
@@ -4061,17 +4061,17 @@
   "chore.mine.2.stones": "Mine 2 Stones",
   "chore.mine.3.stones": "Mine 3 Stones",
   "chore.mine.4.stones": "Mine 4 Stones",
-  "chore.grow.3.yellow.carnation": "Grow 3 Yellow Carnation",
-  "chore.grow.3.blue.carnation": "Grow 3 Blue Carnation",
-  "chore.grow.3.white.carnation": "Grow 3 White Carnation",
-  "chore.grow.3.red.lotus": "Grow 3 Red Lotus",
-  "chore.grow.3.yellow.lotus": "Grow 3 Yellow Lotus",
-  "chore.grow.3.white.lotus": "Grow 3 White Lotus",
-  "chore.grow.3.blue.pansy": "Grow 3 Blue Pansy",
-  "chore.grow.3.white.pansy": "Grow 3 White Pansy",
-  "chore.grow.3.white.cosmos": "Grow 3 White Cosmos",
-  "chore.grow.6.purple.daffodil": "Grow 6 Purple Daffodil",
-  "chore.grow.6.red.balloon.flower": "Grow 6 Red Balloon Flower",
+  "chore.grow.3.yellow.carnation": "Grow Yellow Carnation 3 times",
+  "chore.grow.3.blue.carnation": "Grow Blue Carnation 3 times",
+  "chore.grow.3.white.carnation": "Grow White Carnation 3 times",
+  "chore.grow.3.red.lotus": "Grow Red Lotus 3 times",
+  "chore.grow.3.yellow.lotus": "Grow Yellow Lotus 3 times",
+  "chore.grow.3.white.lotus": "Grow White Lotus 3 times",
+  "chore.grow.3.blue.pansy": "Grow Blue Pansy 3 times",
+  "chore.grow.3.white.pansy": "Grow White Pansy 3 times",
+  "chore.grow.3.white.cosmos": "Grow White Cosmos 3 times",
+  "chore.grow.6.purple.daffodil": "Grow 6 Purple Daffodil 6 times",
+  "chore.grow.6.red.balloon.flower": "Grow 6 Red Balloon Flower 6 times",
   "chore.collect.40.eggs": "Collect Eggs 40 times",
   "chore.collect.60.eggs": "Collect Eggs 60 times",
   "chore.collect.80.eggs": "Collect Eggs 80 times",
