--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3896,8 +3896,8 @@
   "chore.harvest.200.cauliflower": "Harvest Cauliflower 200 times",
   "chore.harvest.100.parsnip": "Harvest Parsnip 100 times",
   "chore.harvest.150.parsnip": "Harvest Parsnip 150 times",
-  "chore.harvest.80.eggplant": "Harvest Eggplant 80 times",
-  "chore.harvest.120.eggplant": "Harvest Eggplant 120 times",
+  "chore.harvest.80.eggplant": "Harvest Eggplants 80 times",
+  "chore.harvest.120.eggplant": "Harvest Eggplants 120 times",
   "chore.harvest.150.sunflowers": "Harvest Sunflowers 150 times",
   "chore.harvest.200.sunflowers": "Harvest Sunflowers 200 times",
   "chore.harvest.250.sunflowers": "Harvest Sunflowers 250 times",
