--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4070,8 +4070,8 @@
   "chore.grow.3.blue.pansy": "Grow Blue Pansy 3 times",
   "chore.grow.3.white.pansy": "Grow White Pansy 3 times",
   "chore.grow.3.white.cosmos": "Grow White Cosmos 3 times",
-  "chore.grow.6.purple.daffodil": "Grow 6 Purple Daffodil 6 times",
-  "chore.grow.6.red.balloon.flower": "Grow 6 Red Balloon Flower 6 times",
+  "chore.grow.6.purple.daffodil": "Grow Purple Daffodil 6 times",
+  "chore.grow.6.red.balloon.flower": "Grow Red Balloon Flower 6 times",
   "chore.collect.40.eggs": "Collect Eggs 40 times",
   "chore.collect.60.eggs": "Collect Eggs 60 times",
   "chore.collect.80.eggs": "Collect Eggs 80 times",
