--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3802,6 +3802,23 @@
   "npcDialogues.chase.intro2": "However I'm in a bit of a pickle. My herd has mysteriously gone missing - it's like they disappeared out of thin air!",
   "npcDialogues.sheep.intro1": "Thanks for finding me! One moment I was pretending to be a sheep with the Cowboy and the next moment I was here.",
   "npcDialogues.sheep.intro2": "All I remember is flashing lights and strange noises...",
+  "skill.greenThumb": "Reduce crop growth time by 5%",
+  "skill.youngFarmer": "+0.1 Basic Crop yield",
+  "skill.experiencedFarmer": "+0.1 Medium Crop yield",
+  "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
+  "skill.efficientBin": "+5 Sprout Mix when collecting from Compost Bin",
+  "skill.turboCharged": "+5 Fruitful Blend when collecting from Turbo Composter",
+  "skill.oldFarmer": "+0.1 Advanded Crop yield",
+  "skill.strongRoots": "Radish, Wheat, Kale, Barley grow 10% faster",
+  "skill.coinSwindler": "+10% coins when selling crops (Seed Shop)",
+  "skill.goldenSunflower": "0.15% chance of getting +0.35 gold when manually harvesting sunflowers",
+  "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area",
+  "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area",
+  "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops (usable once every 72 hours)",
+  "skill.acreFarm": "+1 Advanced crop yield, -0.5 Basic and Medium crop yield",
+  "skill.hectareFarm": "+1 Basic and Medium crop yield, -0.5 Advanced crop yield",
+  "skill.premiumWorms": "+10 Rapid Root when collecting from Premium Composter",
+  "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
   "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
