--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3744,7 +3744,7 @@
   "restock.full": "Full Restock",
   "restock.outOfStock": "{{npc}} ran out of stock. Choose your desired restock option below:",
   "restock.selectOption": "Select your desired restock option:",
-  "restock.itemsToRestock": "The following items will be added to the stock:",
+  "restock.itemsToRestock": "The following quantities will be added to the existing stock in your shop:",
   "restock.moreStock": "Restock to get more stock.",
   "restock.dailyShipment": "Daily Shipment",
   "restock.shipmentArrived": "Your daily free shipment has arrived!",
