[FEAT] Release NPC Restock + UI improvements (#4781)
* [FEAT] Release NPC Restock

* Padding

* Put daily shipment at the top

* Edit wording

* Adjust margin

* Remove npc from modal

* minor text fixes

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3744,9 +3744,10 @@
   "restock.full": "Full Restock",
   "restock.outOfStock": "{{npc}} ran out of stock. Choose your desired restock option below:",
   "restock.selectOption": "Select your desired restock option:",
-  "restock.itemsToRestock": "The following items will be restocked:",
+  "restock.itemsToRestock": "The following quantities will be added to the existing stock in your shop:",
   "restock.moreStock": "Restock to get more stock.",
   "restock.dailyShipment": "Daily Shipment",
+  "restock.shipmentArrived": "Your daily free shipment has arrived!",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
