[FEAT] Add resources purchase to tradeable header

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2321,6 +2321,8 @@
   "lostSunflorian.line1": "My father sent me here to rule over Helios.",
   "lostSunflorian.line2": "Unfortunately, these Bumpkins don't like me watching them.",
   "lostSunflorian.line3": "I can't wait to return to Sunfloria.",
+  "marketplace.youOwn": "You own: {{count}}",
+  "marketplace.pricePerUnit": "{{price}} per unit",
   "marketplace.areYouSureYouWantToBuy": "Are you sure you want to buy this item?",
   "marketplace.successfulPurchase": "You just successfully bought this item!",
   "marketplace.signAndBuy": "Sign & Buy",
@@ -2392,6 +2394,7 @@
   "marketplace.cancelListing": "Cancel Listing",
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
   "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
+  "marketplace.resource": "Resource",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
