--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4421,5 +4421,6 @@
   "marketplace.totalVolume": "Total Volume",
   "marketplace.totalTrades": "Total Trades",
   "marketplace.walletsHoldingCollectibles": "Wallets holding collectibles",
-  "marketplace.onchainComingSoon": "On chain trading coming soon"
+  "marketplace.onchainComingSoon": "On chain trading coming soon",
+  "marketplace.sold": "Sold"
 }
