[FEAT] Update offers

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2341,15 +2341,19 @@
   "marketplace.listItem": "List {{type}}",
   "marketplace.walletRequired": "Wallet required",
   "marketplace.listings": "Listings",
+  "marketplace.offerPrice": "Offer price",
+  "marketplace.availableListings": "{{count}} available",
   "marketplace.noListings": "No listings available",
   "marketplace.noOffers": "No offers available",
   "marketplace.offers": "Offers",
   "marketplace.topOffer": "Top offer",
+  "marketplace.offer": "Offer",
   "marketplace.acceptOffer": "Accept offer",
   "marketplace.makeOffer": "Make an offer",
   "marketplace.expiry": "Expiry",
   "marketplace.from": "From",
   "marketplace.sfl": "SFL",
+  "marketplace.quantity": "Quantity",
   "marketplace.lastSold": "Last sold: {{sfl}} SFL",
   "marketplace.noSales": "There have been no recent sales.",
   "marketplace.priceHistory": "Sale history",
