[CHORE] Declare 'Active' & 'Daily' in Trade Modal Texts

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -514,7 +514,7 @@
   "bumpkinTrade.youWillReceive": "You will receive",
   "bumpkinTrade.cancel": "Cancel",
   "bumpkinTrade.list": "List",
-  "bumpkinTrade.maxListings": "Max listings reached",
+  "bumpkinTrade.maxListings": "Max active listings reached",
   "bumpkinTrade.visitBoard": "Visit the trading board to list more trades.",
   "bumpkinTrade.unlockMoreTrades": "Unlock more trades",
   "bumpkinTrade.max": "Max: {{max}}",
@@ -1885,10 +1885,10 @@
   "refresh": "Refresh",
   "refreshing": "Refreshing",
   "remaining": "remaining",
-  "remaining.free.listings": "{{listingsRemaining}} listings remaining",
-  "remaining.free.listing": "1 listing remaining",
-  "remaining.free.purchases": "{{purchasesRemaining}} purchases remaining",
-  "remaining.free.purchase": "1 purchase remaining",
+  "remaining.free.listings": "{{listingsRemaining}} daily listings remaining",
+  "remaining.free.listing": "1 daily listing remaining",
+  "remaining.free.purchases": "{{purchasesRemaining}} daily purchases remaining",
+  "remaining.free.purchase": "1 daily purchase remaining",
   "remove": "Remove",
   "reqSkillPts": "Required Skill Points:",
   "reqSkills": "Required Skills:",
