[FEAT] Remove mins

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1,6 +1,7 @@
 {
   "ingredients": "Ingredients",
   "animals.buyAnimal": "Buy Animal",
+  "accept": "Accept",
   "animals.buildingIsFull": "{{buildingName}} is full!",
   "breadWinner.description": "Earn 0.001 SFL",
   "breadWinner.one": "Well, well, well, partner... It looks like you need some SFL!",
@@ -2331,7 +2332,7 @@
   "marketplace.purpose": "Purpose",
   "marketplace.purchasing": "Purchasing",
   "marketplace.purchasing.failure": "Oops, something went wrong. Please try again.",
-  "marketplace.purchasing.success": "Congratulations, you have successfully purchased this item!",
+  "marketplace.purchasing.success": "Congratulations, your purchase was successful!",
   "marketplace.listing": "Listing",
   "marketplace.boost": "Boost",
   "marketplace.collectibles": "Collectibles",
@@ -2368,12 +2369,14 @@
   "marketplace.myListings": "Your listings",
   "marketplace.myOffers": "Your offers",
   "marketplace.noCollection": "You do not have any available items in your collection.",
-  "marketplace.noMyOffers": "You have not made any offers.",
+  "marketplace.noMyOffers": "You have not made any offers",
   "marketplace.sflEscrowed": "{{sfl}} SFL Locked",
   "marketplace.itemInUse": "Item in use",
   "marketplace.itemSecured": "Item secured",
+  "marketplace.resourcesSecured": "Resources secured",
+  "marketplace.resourcesSecuredWarning": "You will not be able to use your resources while they're listed.",
   "marketplace.youDontOwn": "You do not own this item!",
-  "marketplace.itemSecuredWarning": "You will not be able to use your item while it's listed",
+  "marketplace.itemSecuredWarning": "You will not be able to use your item while it's listed.",
   "marketplace.accepting": "Accepting offer",
   "marketplace.accepting.success": "Congratulations, you have successfully accepted the offer!",
   "marketplace.accepting.failure": "Oops, something went wrong. Please try again.",
@@ -2389,7 +2392,7 @@
   "marketplace.listing.cancelling.success": "Congratulations, you have successfully cancelled your listing!",
   "marketplace.listing.cancelling.failure": "Oops, something went wrong. Please try again.",
   "marketplace.itemInUseWarning": "This item is currently being used on your farm. You must first remove it into your chest.",
-  "marketplace.noMyListings": "You do not have any listings.",
+  "marketplace.noMyListings": "You do not have any listings",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
   "marketplace.itemSold": "Item sold",
   "marketplace.congratulationsItemSold": "Congratulations, your item has sold!",
