[FEAT] Allow claim multiple offers

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2395,8 +2395,10 @@
   "marketplace.noMyListings": "You do not have any listings",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
   "marketplace.itemSold": "Item sold",
+  "marketplace.offerAccepted": "Offer accepted",
   "marketplace.congratulationsItemSold": "Congratulations, your item has sold!",
-  "marketplace.youHaveHadSales": "You item(s) sold while you were away!",
+  "marketplace.youHaveHadSales": "Your item(s) sold while you were away!",
+  "marketplace.offersWereAccepted": "One or more offers were accepted while you were away!",
   "marketplace.yourListings": "Your listings",
   "marketplace.cancelListing": "Cancel Listing",
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
