[FEAT] Prompt for username

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -687,18 +687,20 @@
   "pete.intro.three": "To get started, you will want to chop down those trees and expand your island.",
   "pete.intro.four": "Before you can join the fun, you will need to grow your farm and gather some resources. You don't want to turn up empty handed!",
   "pete.intro.five": "To get started, you will want to chop down those trees and grow your island.",
-  "mayor.plaza.changeNamePrompt": "Do you want to change your name? Unfortunately, I can't do that for you right now, the paperwork is too much for me to handle.",
-  "mayor.plaza.intro": "Howdy fellow Bumpkin, it seems we haven't been introduced yet.",
-  "mayor.plaza.role": "I'm the Mayor of this town! I'm in charge of making sure everyone is happy. I also make sure that everyone has a name!",
-  "mayor.plaza.fixNamePrompt": "You don't have a name yet? Well, we can fix that! Do you want me to get the papers ready?",
-  "mayor.plaza.enterUsernamePrompt": "Enter your username: ",
-  "mayor.plaza.usernameValidation": "Please be aware that usernames must adhere to our",
-  "mayor.plaza.niceToMeetYou": "Nice to meet you, !",
-  "mayor.plaza.congratulations": "Congratulations, your paperwork is now complete. See you around!",
-  "mayor.plaza.enjoyYourStay": "I hope you enjoy your stay in Sunflower Land! If you ever need me again, just come back to me!",
+  "mayor.plaza.metBefore": "Howdy {{username}}! Looks like we've already met. If you're looking to change your name, I can't do that for you right now, the paperwork is far too much for me to handle.",
+  "mayor.plaza.coffee": "Hmmm, don't you just love the smell of coffee?",
+  "mayor.plaza.intro": "Well howdy fellow Bumpkin, it seems we haven't been introduced yet.",
+  "mayor.plaza.role": "I'm the Mayor of this wonderful town! As mayor, I help new Bumpkins like yourself get settled in and feel welcome.",
+  "mayor.plaza.fixNamePrompt": "I see you're still going by 'Bumpkin'! Let's give you a name that'll help you stand out from all the other Bumpkins in town. Shall we get started?",
+  "mayor.plaza.enterUsernamePrompt": "What name would you like to be known as?",
+  "mayor.plaza.usernameValidation": "Just remember, your chosen name needs to follow our",
+  "mayor.plaza.congratulations": "Well {{username}}, the paperwork is all done - you're officially a named citizen of Sunflower Land!",
+  "mayor.plaza.firstDelivery": "good luck finding {{npc}}! I am sure I saw them around here somewhere...",
+  "mayor.plaza.goodbye": "Alright, well {{text}}.",
+  "mayor.plaza.bye": "Bye",
+  "mayor.plaza.haveFun": "I better get back to work. Have fun exploring!",
   "mayor.codeOfConduct": "Code of Conduct",
   "mayor.failureToComply": "Failure to comply may result in penalties, including possible account suspension",
-  "mayor.paperworkComplete": "Your paperwork is now complete. See you around",
   "crop.boom.welcome": "Welcome to Crop Boom",
   "crop.boom.reachOtherSide": "Reach the other side of the dangerous crop field to claim an Arcade Token",
   "crop.boom.bewareExplodingCrops": "Beware of exploding crops. If you step on these, you will start from the beginning",
@@ -3498,7 +3500,7 @@
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Faction members only",
   "world.newArea": "New",
-  "world.intro.one": "Howdy Bumpkin, welcome to the Pumpkin Plaza. Here Bumpkins from far and wide come together to trade, complete deliveries and play mini-games.",
+  "world.intro.one": "Howdy Bumpkin, welcome to Pumpkin Plaza. Here Bumpkins from far and wide come together to trade, complete deliveries and play mini-games.",
   "world.intro.two": "Explore the Plaza and find Bumpkins who are waiting for your deliveries. In exchange, they will give you rewards!",
   "world.intro.missingDelivery": "Hmmm, it looks like you haven't gathered resources for a delivery yet. You can still explore in the meantime.",
   "world.intro.delivery": "Oh great, it looks like you've got the resources for a delivery!",
