[CHORE] Moar 'times' for Chore Descriptions

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3848,12 +3848,12 @@
   "bounties.flower.intro.two": "Bring me your finest flowers, and I'll make it worth your while.",
   "chore.chop.1.tree": "Chop 1 tree",
   "chore.chop.2.trees": "Chop 2 trees",
-  "chore.mine.20.gold": "Mine 20 Gold",
-  "chore.mine.23.gold": "Mine 23 Gold",
-  "chore.mine.25.gold": "Mine 25 Gold",
-  "chore.mine.10.crimstone": "Mine 10 Crimstone",
-  "chore.mine.12.crimstone": "Mine 12 Crimstone",
-  "chore.mine.15.crimstone": "Mine 15 Crimstone",
+  "chore.mine.20.gold": "Mine Gold 20 times",
+  "chore.mine.23.gold": "Mine Gold 23 times",
+  "chore.mine.25.gold": "Mine Gold 25 times",
+  "chore.mine.10.crimstone": "Mine Crimstone 10 times",
+  "chore.mine.12.crimstone": "Mine Crimstone 12 times",
+  "chore.mine.15.crimstone": "Mine Crimstone 15 times",
   "chore.craft.20.iron.pickaxe": "Craft 20 Iron Pickaxe",
   "chore.craft.25.iron.pickaxe": "Craft 25 Iron Pickaxe",
   "chore.craft.15.gold.pickaxe": "Craft 15 Gold Pickaxe",
@@ -3861,24 +3861,24 @@
   "chore.spend.35000.coins": "Spend 35,000 Coins",
   "chore.spend.42000.coins": "Spend 42,000 Coins",
   "chore.spend.55000.coins": "Spend 55,000 Coins",
-  "chore.pick.45.blueberries": "Pick 45 Blueberries",
-  "chore.pick.51.blueberries": "Pick 51 Blueberries",
-  "chore.pick.60.blueberries": "Pick 60 Blueberries",
-  "chore.pick.30.oranges": "Pick 30 Oranges",
-  "chore.pick.40.oranges": "Pick 40 Oranges",
-  "chore.pick.50.oranges": "Pick 50 Oranges",
-  "chore.pick.25.apples": "Pick 25 Apples",
-  "chore.pick.30.apples": "Pick 30 Apples",
-  "chore.pick.45.apples": "Pick 45 Apples",
-  "chore.pick.35.bananas": "Pick 35 Bananas",
-  "chore.pick.40.bananas": "Pick 40 Bananas",
-  "chore.pick.45.bananas": "Pick 45 Bananas",
-  "chore.pick.40.tomatoes": "Pick 40 Tomatoes",
-  "chore.pick.60.tomatoes": "Pick 60 Tomatoes",
-  "chore.pick.80.tomatoes": "Pick 80 Tomatoes",
-  "chore.pick.25.lemons": "Pick 25 Lemons",
-  "chore.pick.40.lemons": "Pick 40 Lemons",
-  "chore.pick.65.lemons": "Pick 65 Lemons",
+  "chore.pick.45.blueberries": "Pick Blueberries 45 times",
+  "chore.pick.51.blueberries": "Pick Blueberries 51 times",
+  "chore.pick.60.blueberries": "Pick Blueberries 60 times",
+  "chore.pick.30.oranges": "Pick Oranges 30 times",
+  "chore.pick.40.oranges": "Pick Oranges 40 times",
+  "chore.pick.50.oranges": "Pick Oranges 50 times",
+  "chore.pick.25.apples": "Pick Apples 25 times",
+  "chore.pick.30.apples": "Pick Apples 30 times",
+  "chore.pick.45.apples": "Pick Apples 45 times",
+  "chore.pick.35.bananas": "Pick Bananas 35 times",
+  "chore.pick.40.bananas": "Pick Bananas 40 times",
+  "chore.pick.45.bananas": "Pick Bananas 45 times",
+  "chore.pick.40.tomatoes": "Pick Tomatoes 40 times",
+  "chore.pick.60.tomatoes": "Pick Tomatoes 60 times",
+  "chore.pick.80.tomatoes": "Pick Tomatoes 80 times",
+  "chore.pick.25.lemons": "Pick Lemons 25 times",
+  "chore.pick.40.lemons": "Pick Lemons 40 times",
+  "chore.pick.65.lemons": "Pick Lemons 65 times",
   "chore.harvest.450.parsnips": "Harvest Parsnips 450 times",
   "chore.harvest.500.parsnips": "Harvest Parsnips 500 times",
   "chore.harvest.250.eggplants": "Harvest Eggplants 250 times",
@@ -3942,9 +3942,9 @@
   "chore.chop.60.trees": "Chop 60 Trees",
   "chore.chop.70.trees": "Chop 70 Trees",
   "chore.chop.80.trees": "Chop 80 Trees",
-  "chore.mine.50.stones": "Mine 50 Stones",
-  "chore.mine.75.stones": "Mine 75 Stones",
-  "chore.mine.100.stones": "Mine 100 Stones",
+  "chore.mine.50.stones": "Mine Stone 50 times",
+  "chore.mine.75.stones": "Mine Stone 75 times",
+  "chore.mine.100.stones": "Mine Stone 100 times",
   "chore.collect.3.honey": "Collect 3 Honey",
   "chore.collect.5.honey": "Collect 5 Honey",
   "chore.cook.3.fermented.fish": "Cook 3 Fermented Fish",
@@ -3962,14 +3962,14 @@
   "chore.eat.5.chowder": "Eat 5 Chowder",
   "chore.eat.7.chowder": "Eat 7 Chowder",
   "chore.eat.10.chowder": "Eat 10 Chowder",
-  "chore.grow.2.red.pansy": "Grow 2 Red Pansy",
-  "chore.grow.3.red.pansy": "Grow 3 Red Pansy",
-  "chore.grow.2.yellow.pansy": "Grow 2 Yellow Pansy",
-  "chore.grow.3.yellow.pansy": "Grow 3 Yellow Pansy",
-  "chore.grow.2.purple.cosmos": "Grow 2 Purple Cosmos",
-  "chore.grow.3.purple.cosmos": "Grow 3 Purple Cosmos",
-  "chore.grow.2.blue.cosmos": "Grow 2 Blue Cosmos",
-  "chore.grow.3.blue.cosmos": "Grow 3 Blue Cosmos",
+  "chore.grow.2.red.pansy": "Grow Red Pansy 2 times",
+  "chore.grow.3.red.pansy": "Grow Red Pansy 3 times",
+  "chore.grow.2.yellow.pansy": "Grow Yellow Pansy 2 times",
+  "chore.grow.3.yellow.pansy": "Grow Yellow Pansy 3 times",
+  "chore.grow.2.purple.cosmos": "Grow Purple Cosmos 2 times",
+  "chore.grow.3.purple.cosmos": "Grow Purple Cosmos 3 times",
+  "chore.grow.2.blue.cosmos": "Grow Blue Cosmos 2 times",
+  "chore.grow.3.blue.cosmos": "Grow Blue Cosmos 3 times",
   "chore.spend.1000.coins": "Spend 1,000 Coins",
   "chore.spend.2000.coins": "Spend 2,000 Coins",
   "chore.spend.3000.coins": "Spend 3,000 Coins",
@@ -3988,12 +3988,12 @@
   "chore.chop.450.trees": "Chop 450 Trees",
   "chore.chop.500.trees": "Chop 500 Trees",
   "chore.chop.600.trees": "Chop 600 Trees",
-  "chore.mine.200.stones": "Mine 200 Stones",
-  "chore.mine.250.stones": "Mine 250 Stones",
-  "chore.mine.300.stones": "Mine 300 Stones",
-  "chore.mine.80.iron": "Mine 80 Iron",
-  "chore.mine.90.iron": "Mine 90 Iron",
-  "chore.mine.100.iron": "Mine 100 Iron",
+  "chore.mine.200.stones": "Mine Stone 200 times",
+  "chore.mine.250.stones": "Mine Stone 250 times",
+  "chore.mine.300.stones": "Mine Stone 300 times",
+  "chore.mine.80.iron": "Mine Iron 80 times",
+  "chore.mine.90.iron": "Mine Iron 90 times",
+  "chore.mine.100.iron": "Mine Iron 100 times",
   "chore.earn.2500.coins": "Earn 2,500 Coins",
   "chore.earn.3500.coins": "Earn 3,500 Coins",
   "chore.earn.5000.coins": "Earn 5,000 Coins",
@@ -4079,9 +4079,9 @@
   "chore.chop.3.trees": "Chop 3 Trees",
   "chore.chop.4.trees": "Chop 4 Trees",
   "chore.chop.5.trees": "Chop 5 Trees",
-  "chore.mine.2.stones": "Mine 2 Stones",
-  "chore.mine.3.stones": "Mine 3 Stones",
-  "chore.mine.4.stones": "Mine 4 Stones",
+  "chore.mine.2.stones": "Mine Stone 2 times",
+  "chore.mine.3.stones": "Mine Stone 3 times",
+  "chore.mine.4.stones": "Mine Stone 4 times",
   "chore.grow.3.yellow.carnation": "Grow Yellow Carnation 3 times",
   "chore.grow.3.blue.carnation": "Grow Blue Carnation 3 times",
   "chore.grow.3.white.carnation": "Grow White Carnation 3 times",
