[FEAT] Resources In Marketplace (#4795)
* [FEAT] Add resources purchase to tradeable header

* [FEAT] Rewire up listings

* [FEAT] Update offers

* [FEAT] Remove mins

* [FEAT] Update with main

* [FEAT] Add in trade mins

* [FIX] Unit Price

* [FIX] Reload after cancel

* [FEAT] Allow claim multiple offers

* [CHORE] Remove old component

* [CHORE] Remove unused imports

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1,6 +1,7 @@
 {
   "ingredients": "Ingredients",
   "animals.buyAnimal": "Buy Animal",
+  "accept": "Accept",
   "animals.buildingIsFull": "{{buildingName}} is full!",
   "breadWinner.description": "Earn 0.001 SFL",
   "breadWinner.one": "Well, well, well, partner... It looks like you need some SFL!",
@@ -2321,6 +2322,8 @@
   "lostSunflorian.line1": "My father sent me here to rule over Helios.",
   "lostSunflorian.line2": "Unfortunately, these Bumpkins don't like me watching them.",
   "lostSunflorian.line3": "I can't wait to return to Sunfloria.",
+  "marketplace.youOwn": "You own: {{count}}",
+  "marketplace.pricePerUnit": "{{price}} per unit",
   "marketplace.areYouSureYouWantToBuy": "Are you sure you want to buy this item?",
   "marketplace.successfulPurchase": "You just successfully bought this item!",
   "marketplace.signAndBuy": "Sign & Buy",
@@ -2329,7 +2332,7 @@
   "marketplace.purpose": "Purpose",
   "marketplace.purchasing": "Purchasing",
   "marketplace.purchasing.failure": "Oops, something went wrong. Please try again.",
-  "marketplace.purchasing.success": "Congratulations, you have successfully purchased this item!",
+  "marketplace.purchasing.success": "Congratulations, your purchase was successful!",
   "marketplace.listing": "Listing",
   "marketplace.boost": "Boost",
   "marketplace.collectibles": "Collectibles",
@@ -2339,15 +2342,19 @@
   "marketplace.listItem": "List {{type}}",
   "marketplace.walletRequired": "Wallet required",
   "marketplace.listings": "Listings",
+  "marketplace.offerPrice": "Offer price",
+  "marketplace.availableListings": "{{count}} available",
   "marketplace.noListings": "No listings available",
   "marketplace.noOffers": "No offers available",
   "marketplace.offers": "Offers",
   "marketplace.topOffer": "Top offer",
+  "marketplace.offer": "Offer",
   "marketplace.acceptOffer": "Accept offer",
   "marketplace.makeOffer": "Make an offer",
   "marketplace.expiry": "Expiry",
   "marketplace.from": "From",
   "marketplace.sfl": "SFL",
+  "marketplace.quantity": "Quantity",
   "marketplace.lastSold": "Last sold: {{sfl}} SFL",
   "marketplace.noSales": "There have been no recent sales.",
   "marketplace.priceHistory": "Sale history",
@@ -2362,12 +2369,14 @@
   "marketplace.myListings": "Your listings",
   "marketplace.myOffers": "Your offers",
   "marketplace.noCollection": "You do not have any available items in your collection.",
-  "marketplace.noMyOffers": "You have not made any offers.",
+  "marketplace.noMyOffers": "You have not made any offers",
   "marketplace.sflEscrowed": "{{sfl}} SFL Locked",
   "marketplace.itemInUse": "Item in use",
   "marketplace.itemSecured": "Item secured",
+  "marketplace.resourcesSecured": "Resources secured",
+  "marketplace.resourcesSecuredWarning": "You will not be able to use your resources while they're listed.",
   "marketplace.youDontOwn": "You do not own this item!",
-  "marketplace.itemSecuredWarning": "You will not be able to use your item while it's listed",
+  "marketplace.itemSecuredWarning": "You will not be able to use your item while it's listed.",
   "marketplace.accepting": "Accepting offer",
   "marketplace.accepting.success": "Congratulations, you have successfully accepted the offer!",
   "marketplace.accepting.failure": "Oops, something went wrong. Please try again.",
@@ -2383,15 +2392,18 @@
   "marketplace.listing.cancelling.success": "Congratulations, you have successfully cancelled your listing!",
   "marketplace.listing.cancelling.failure": "Oops, something went wrong. Please try again.",
   "marketplace.itemInUseWarning": "This item is currently being used on your farm. You must first remove it into your chest.",
-  "marketplace.noMyListings": "You do not have any listings.",
+  "marketplace.noMyListings": "You do not have any listings",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
   "marketplace.itemSold": "Item sold",
+  "marketplace.offerAccepted": "Offer accepted",
   "marketplace.congratulationsItemSold": "Congratulations, your item has sold!",
-  "marketplace.youHaveHadSales": "You item(s) sold while you were away!",
+  "marketplace.youHaveHadSales": "Your item(s) sold while you were away!",
+  "marketplace.offersWereAccepted": "One or more offers were accepted while you were away!",
   "marketplace.yourListings": "Your listings",
   "marketplace.cancelListing": "Cancel Listing",
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
   "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
+  "marketplace.resource": "Resource",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
